AUTOMAKE_OPTIONS = subdir-objects

AM_CXXFLAGS = -I. -I.. -I../include

noinst_PROGRAMS = simulate

simulate_SOURCES = src.cpp

#simulate_SOURCES = processor/register/register.cpp processor/register/register_file.cpp processor/memory.cpp processor/processor.cpp os/os.cpp utility/stats.cpp simulator.cpp simulate.cpp

# simulate_SOURCES = simulate.cpp simulator.cpp os.cpp clock.cpp memory.cpp processor.cpp register.cpp register_file.cpp stats.cpp
